--- a/Excercise_04/Contactus.html
+++ b/Excercise_04/Contactus.html
@@ -100,7 +100,8 @@
         padding: 5px;
         width: 15%;
         background-color: rgb(184, 187, 185);
-        border-color : black;
+        border-color : rgb(159, 158, 158);
+        border-radius: 6px;
         color: rgb(45, 44, 44);
         
        }
@@ -163,7 +164,7 @@
                 <label for="Comments and Questions">Comments and Questions</label><br>
                 <textarea name="Comments" id="Comments" cols="30" rows="10"></textarea><br>
             </div>
-            <input class="button" type="button" name="submit" value="Submit"><br>
+            <button class="button">Submit</button><br>
         </form>
     </div>
 </body>
