--- a/Excercise_04/Terms.html
+++ b/Excercise_04/Terms.html
@@ -84,16 +84,20 @@
             color: rgba(0, 0, 0, 0.292);
         }
       #pad{
-        width: 45%;
+        width: 38%;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 13px;
         color: rgb(52, 52, 52);
+        padding: 8px;
+        border-radius: 5px;
       }
       #submit{
-        width: 20%;
+        width: 18%;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 13px;
         color: rgb(52, 52, 52);
+        padding: 8px;
+        border-radius: 5px;
 
       }
       .sign1{
@@ -150,8 +154,9 @@ If you wish to purchase any predictor service made available through the Service
             <div class="group1">
                 <label class="l1" for="Please sign here">Please sign here <sup style="color: red;">*</sup></label><br>
                 <textarea class="sign1" name="signature pad" id="signaturepad" cols="30" rows="10"></textarea><br>
-                <input type="button" name="clear signature pad" value="clear signature pad" id="pad"><br><br>
-                <input type="button" name="Submit" value="Submit" id="submit">
+                <button id="pad">clear signature pad</button><br><br>
+                <button id="submit">Submit</button>
+               
             </div>
         </form>
        
